--- a/cart.html
+++ b/cart.html
@@ -141,7 +141,77 @@
           </div>
         </div>
 
-      </main>
+          <hr>
+
+          <div class="container">
+            <p class="lead">Forma de pago</p>
+            <div class="row">
+                <div class="col-12 col-md-2">
+                    <p id="selectedPaymentText">No ha seleccionado</p>
+                </div>
+                <div class="col-12 col-md-8">
+                  <a data-toggle="modal" data-target="#paymentModal" style="color: blue; text-decoration: underline;">Seleccionar</a>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="paymentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h4 class="modal-title">Forma de Pago</h4>
+                  </div>
+                  <div class="modal-body">
+                      <form id="paymentForm">
+                          <div class="form-check">
+                              <input class="form-check-input" type="radio" id="creditCardRadio" name="paymentOption" value="creditCard">
+                              <label class="form-check-label" for="creditCardRadio">Tarjeta de Crédito</label>
+                          </div>
+                          <hr>
+                          <div id="creditCardFields" class="form-group">
+                            <div class="container">
+                              <div class="row">
+                                <div class="col-md-7">
+                                  <label for="creditCardNumber">Número de Tarjeta:</label>
+                                  <input type="number" inputmode="numeric" id="creditCardNumber" class="form-control py-2 payment-field no-arrow-input" required pattern="\d{16}">
+                                </div>
+                                <div class="col-md-4">
+                                  <label for="securityCode">Código de Seg.:</label>
+                                  <input type="password" id="securityCode" class="form-control py-2 payment-field" required>
+                                </div>
+                                <div class="col-md-7 py-1">
+                                  <label for="expirationDate">Vencimiento (MM/AA):</label>
+                                  <input type="text" id="expirationDate" class="form-control py-2 payment-field" pattern="\d{2}/\d{2}" required>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+    
+                          <div class="form-check pt-4">
+                            <input class="form-check-input" type="radio" id="bankTransferRadio" name="paymentOption" value="bankTransfer">
+                            <label class="form-check-label" for="bankTransferRadio">Transferencia Bancaria</label>
+                          </div>
+                          <hr>
+    
+                          <div id="bankTransferFields" class="form-group">
+                            <div class="container">
+                              <div class="row">
+                                <div class="col-md-7">
+                                  <label for="accountNumber">Número de Cuenta:</label>
+                                  <input type="number" inputmode="numeric" id="accountNumber" class="form-control py-2 payment-field no-arrow-input">
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                      </form>
+                  </div>
+                  <div class="modal-footer" class="form-group">
+                      <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                      <button type="button" class="btn btn-primary" id="saveButton">Guardar</button>
+                  </div>
+              </div>
+          </div>
+        </div>
+
     </div>
   </main>
   <footer class="text-muted">
@@ -161,10 +231,14 @@
       <div></div>
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/11606f83bb.js" crossorigin="anonymous"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
-  <script src="https://kit.fontawesome.com/11606f83bb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
